--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "create-admin": "node scripts/create-admin.js",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -42,16 +44,20 @@
     "@supabase/supabase-js": "^2.86.2",
     "@tanstack/react-query": "^5.83.0",
     "bcryptjs": "^3.0.3",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
+    "events": "^3.3.0",
     "input-otp": "^1.4.2",
-    "jsonwebtoken": "^9.0.3",
+    "jose": "^6.1.3",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "otplib": "^12.0.1",
+    "process": "^0.11.10",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
@@ -59,10 +65,14 @@
     "react-hook-form": "^7.61.1",
     "react-resizable-panels": "^2.1.9",
     "react-router-dom": "^6.30.1",
+    "readable-stream": "^4.7.0",
     "recharts": "^2.15.4",
+    "resend": "^6.5.2",
     "sonner": "^1.7.4",
+    "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "util": "^0.12.5",
     "vaul": "^0.9.9",
     "zod": "^3.25.76"
   },
@@ -70,7 +80,6 @@
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.16.5",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.23",
@@ -81,7 +90,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^15.15.0",
-    "lovable-tagger": "^1.1.11",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
