--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.86.2",
     "@tanstack/react-query": "^5.83.0",
     "bcryptjs": "^3.0.3",
@@ -70,7 +71,6 @@
     "react-router-dom": "^6.30.1",
     "readable-stream": "^4.7.0",
     "recharts": "^2.15.4",
-    "resend": "^6.5.2",
     "sonner": "^1.7.4",
     "stream-browserify": "^3.0.0",
     "tailwind-merge": "^2.6.0",
