--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.86.2",
     "@tanstack/react-query": "^5.83.0",
     "bcryptjs": "^3.0.3",
@@ -56,9 +55,11 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "events": "^3.3.0",
+    "form-data": "^4.0.5",
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.462.0",
+    "mailgun.js": "^12.4.0",
     "next-themes": "^0.3.0",
     "otplib": "^12.0.1",
     "process": "^0.11.10",
