--- a/package.json
+++ b/package.json
@@ -55,12 +55,11 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.6.0",
     "events": "^3.3.0",
-    "form-data": "^4.0.5",
     "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.462.0",
-    "mailgun.js": "^12.4.0",
     "next-themes": "^0.3.0",
+    "nodemailer": "^7.0.11",
     "otplib": "^12.0.1",
     "process": "^0.11.10",
     "qrcode": "^1.5.4",
