--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "resend": "^6.5.2",
+    "nodemailer": "^7.0.11",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1"
   }
